Work on styling. Added FontAwesome.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--FontAwesome CDN-->
+    <script src="https://use.fontawesome.com/6249918f14.js"></script>
+    <!--Bootstrap CDN-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 
